--- a/src/styles.css
+++ b/src/styles.css
@@ -636,3 +636,5 @@ input{
     font-size: 11px;
 }
 /*Sidebar*/
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
