--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,8 +22,8 @@
                   <a class="linkedin" href="#"><i class="lni-linkedin-filled"></i></a>
                 </div>
                 <div class="header-top-right float-right">
-                  <a href="login.html" class="header-top-button"><i class="lni-lock"></i> Log In</a> |
-                  <a href="register.html" class="header-top-button"><i class="lni-pencil"></i> Register</a>
+                  <a href="/auth" class="header-top-button"><i class="lni-lock"></i> Log In</a> |
+                  <a href="/auth/register" class="header-top-button"><i class="lni-pencil"></i> Register</a>
                 </div>
               </div>
             </div>
@@ -252,13 +252,13 @@
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
               <h3 class="footer-titel">Subscribe <span>on Our News</span></h3>
-              <form method="post" id="subscribe-form" name="subscribe-form" class="validate">
+             <!-- <form method="post" id="subscribe-form" name="subscribe-form" class="validate">
                 <div class="form-group is-empty">
                   <input type="email" value="" name="Email" class="form-control" id="EMAIL" placeholder="Email address" required="">
                   <button type="submit" name="subscribe" id="subscribes" class="btn btn-common sub-btn"><i class="lni-envelope"></i></button>
                   <div class="clearfix"></div>
                 </div>
-              </form>
+              </form>-->
               <div class="social-icon">
                 <a class="facebook" href="#"><i class="lni-facebook-filled"></i></a>
                 <a class="twitter" href="#"><i class="lni-twitter-filled"></i></a>
