--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,14 @@
 .mat-progress-spinner circle, .mat-spinner circle{
     color: red;
 }
+
+.mat-expansion-panel:not([class*=mat-elevation-z]){
+    box-shadow: none;
+}
+mat-panel-title{
+        font-size: 14px;
+        text-transform: uppercase;
+        line-height: 20px;
+        color: #0dcdbd;
+    
+}
