--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -43,7 +43,7 @@
               </div>
               
             </div>
-            <div class="row range-slider option-hide" style="display: none;">
+            <div class="row range-slider option-hide" >
               <div class="col-lg-3 col-md-6 col-xs-12">
                 <div class="search-category-container">
                   <label class="styled-select">
@@ -83,7 +83,17 @@
             </div>
             <div class="row">
               <div class="col-xs-12 col-sm-12 col-md-12 text-left">
-                <a href="#" class="show-options"> More options</a>
+                <mat-accordion>
+                  <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                      <mat-panel-title>
+                       + More Options
+                      </mat-panel-title>
+                    </mat-expansion-panel-header>
+                
+                  </mat-expansion-panel>
+                </mat-accordion>
+                
               </div>
             </div>
 
