--- a/src/app/post/post.component.css
+++ b/src/app/post/post.component.css
@@ -2,3 +2,14 @@
     background-color: #0dcdbd;
     border-color: #0dcdbd;
 }
+
+.mat-expansion-panel:not([class*=mat-elevation-z]){
+    box-shadow: none;
+}
+mat-panel-title{
+        font-size: 14px;
+        text-transform: uppercase;
+        line-height: 20px;
+        color: #0dcdbd;
+    
+}
