--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -9,69 +9,182 @@
       </div>
       <div class="content">
           <form #postForm="ngForm" (ngSubmit)="formSubmit(postForm.value)">
-        <div class="row">
-          <div class="col-lg-3 col-md-6 col-xs-12">
-            <div class="search-category-container">
-              <label class="styled-select">
-                <select class="classic" id="category" name="category" (change)="CategoryChange($event.target.selectedIndex)" placeholder="Select Category">
-                  <option value="0">Select Category</option>
-                  <option *ngFor="let cat of Categories">{{cat.name}}</option>
-                </select>
-              </label>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-xs-12">
-            <div class="search-category-container" *ngIf="Selected_Category">
-              <label class="styled-select">
-                <select class="classic" (change)="SubCategoryChange($event.target.selectedIndex)">
-                  <option>Sub Category</option>
-                  <option *ngFor="let cat of SubCategories">{{cat.name}}</option>
-                </select>
-              </label>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-xs-12">
-            <div class="search-category-container" *ngIf="Selected_SubCategory">
-              <label class="styled-select">
-                <select class="classic" (change)="TypeChange($event.target.selectedIndex)">
-                  <option>Type</option>
-                  <option *ngFor="let ty of types">{{ty}}</option>
-                </select>
-              </label>
-            </div>
-          </div>
-          
-        </div>
-        <div class="row">
-            <div class="col-lg-3 col-md-6 col-xs-12">
+            <div class="row">
+              <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12" >
+                
+                <h3>Choose File</h3>      
+                <div class="image-preview mb-3" *ngIf="previewUrl">
+                  <img [src]="previewUrl" height="180" width="200" />                 
+                </div>      
                 <div class="form-group">
-                    <input type="text" ngModel class="form-control" id="title" name="title" placeholder="Title" required="" data-error="Please enter your Title">
-                    <div class="help-block with-errors"></div>
+                    
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-xs-12">
+                <div *ngIf="fileUploadProgress">
+                    Upload progress: {{ fileUploadProgress }}
+                </div>
+                <div class="mb-3" *ngIf="uploadedFilePath">
+                    {{uploadedFilePath}}
+                </div>
+                
                 <div class="form-group">
-                    <input type="text" ngModel class="form-control" id="des" name="des" placeholder="Description" required="" data-error="Please enter your Description">
-                    <div class="help-block with-errors"></div>
+                  <input type="file" value="Choose File" name="image" (change)="fileProgress($event)" />
+                  <div class="form-group">
+                    <button class="btn btn-primary" >Submit</button>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-xs-12">
-                <div class="form-group">
-                    <input type="number" ngModel class="form-control" id="price" name="price" placeholder="Price" required="" data-error="Please enter your Price">
-                    <div class="help-block with-errors"></div>
                 </div>
+              </div>
+              <div class="col-lg-9 col-md-6 col-sm-12 col-xs-12" >
+                <div class="row">
+                  <div class="col-lg-4 col-md-6 col-xs-12">
+                    <div class="search-category-container">
+                      <label class="styled-select">
+                        <select class="classic" id="category" name="category" (change)="CategoryChange($event.target.selectedIndex)" placeholder="Select Category">
+                          <option value="0">Select Category</option>
+                          <option *ngFor="let cat of Categories">{{cat.name}}</option>
+                        </select>
+                      </label>
+                    </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-xs-12">
+                    <div class="search-category-container" *ngIf="Selected_Category">
+                      <label class="styled-select">
+                        <select class="classic" (change)="SubCategoryChange($event.target.selectedIndex)">
+                          <option>Sub Category</option>
+                          <option *ngFor="let cat of SubCategories">{{cat.name}}</option>
+                        </select>
+                      </label>
+                    </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-xs-12">
+                    <div class="search-category-container" *ngIf="Selected_SubCategory">
+                      <label class="styled-select">
+                        <select class="classic" (change)="TypeChange($event.target.selectedIndex)">
+                          <option>Type</option>
+                          <option *ngFor="let ty of types">{{ty}}</option>
+                        </select>
+                      </label>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-lg-3 col-md-6 col-xs-12">
+                      <div class="form-group">
+                          <input type="text" ngModel class="form-control" id="title" name="title" placeholder="Title" required="" data-error="Please enter your Title">
+                          <div class="help-block with-errors"></div>
+                      </div>
+                  </div>
+                  <div class="col-lg-3 col-md-6 col-xs-12">
+                      <div class="form-group">
+                          <input type="text" ngModel class="form-control" id="des" name="des" placeholder="Description" required="" data-error="Please enter your Description">
+                          <div class="help-block with-errors"></div>
+                      </div>
+                  </div>
+                  <div class="col-lg-3 col-md-6 col-xs-12">
+                      <div class="form-group">
+                          <input type="number" ngModel class="form-control" id="price" name="price" placeholder="Price" required="" data-error="Please enter your Price">
+                          <div class="help-block with-errors"></div>
+                      </div>
+                  </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 text-left">
+                  <mat-accordion>
+                    <mat-expansion-panel>
+                      <mat-expansion-panel-header>
+                        <mat-panel-title>
+                         + More Options
+                        </mat-panel-title>
+                      </mat-expansion-panel-header>
+                      
+                      
+                      <div class="row range-slider" >
+                        <div *ngIf="Selected_Category && Selected_Category.city" class="col-lg-3 col-md-6 col-xs-12">
+                          <div class="search-category-container">
+                            <label class="styled-select">
+                              <select name="city" ngModel>
+                                <option value="" disabled>Choose a state</option>
+                                <option *ngFor="let state of states" [ngValue]="state">
+                                  {{ state }}
+                                </option>
+                              </select>
+                            </label>
+                          </div>
+                        </div>
+                        <div *ngIf="Selected_Category && Selected_Category.bedrooms" class="col-lg-3 col-md-6 col-xs-12">
+                            <div class="search-category-container">
+                              <label class="styled-select">
+                                <select name="bedrooms" ngModel>
+                                  <option value="" disabled>Rooms</option>
+                                  <option>1</option>
+                                  <option>2</option>                           
+                                  <option>3</option>                           
+                                  <option>4</option>                           
+                                  <option>5</option>   
+                                </select>
+                              </label>
+                            </div>
+                        </div>
+                        <div *ngIf="Selected_Category && Selected_Category.make" class="col-lg-3 col-md-6 col-xs-12">
+                          <div class="search-category-container">
+                            <label class="styled-select">
+                              <select name="make" class="classic" ngModel>
+                                <option value="" disabled>Make</option>
+                                <option>Audi</option>
+                                <option>Bently</option>                           
+                                <option>Ferrari</option>                           
+                                <option>Fiat</option>                           
+                                <option>Honda</option>                           
+                                <option>Rover</option>
+                              </select>
+                            </label>
+                          </div>
+                      </div>
+                      <div *ngIf="Selected_Category && Selected_Category.year" class="col-lg-3 col-md-6 col-xs-12">
+                        <div class="search-category-container">
+                          <label class="styled-select">
+                            <select name="year" class="classic" >
+                              <option value="" disabled>Year</option>
+                              <option>2011</option>
+                              <option>2012</option>                           
+                              <option>2013</option>                           
+                              <option>2014</option>                           
+                              <option>2015</option>                           
+                              <option>2016</option>
+                              <option>2017</option>
+                              <option>2018</option>
+                              <option>2019</option>
+                              <option>2020</option>
+                            </select>
+                          </label>
+                        </div>
+                    </div>
+                    <div *ngIf="Selected_Category && Selected_Category.brand" class="col-lg-3 col-md-6 col-xs-12">
+                      <div class="search-category-container">
+                        <label class="styled-select">
+                          <select name="brand" class="classic">
+                            <option value="" disabled>Brand</option>
+                            <option>Samsung</option>
+                            <option>Nokia</option>                           
+                            <option>Lenono</option>    
+                          </select>
+                        </label>
+                      </div>
+                  </div>
+                      </div>
+                  
+                    </mat-expansion-panel>
+                  </mat-accordion>
+                  
+                </div>
+                <div class="col-lg-12 col-md-12 col-xs-12">
+                  <div class="text-right mt-3 btn-section">
+                    <button type="submit" class="btn btn-lg btn-primary">Post</button>
+                  </div>
+                </div>
+              </div>
+             </div>
             </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 text-left">
-            <a href="#" class="show-options"> More options</a>
-          </div>
-          <div class="col-lg-12 col-md-12 col-xs-12">
-            <div class="text-right btn-section">
-              <button type="submit" class="btn btn-lg btn-primary">Post</button>
-            </div>
-          </div>
-        </div>
+        
         <div class="row">
           <div class="col-lg-12 col-md-12 col-xs-12">
             <div *ngIf="EMessage!=''"  class="alert m-1 alert-danger alert-dismissible fade show">
