--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -10,11 +10,11 @@
       <div class="content">
           <form #postForm="ngForm" (ngSubmit)="formSubmit(postForm.value)">
             <div class="row">
-              <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12" >
+              <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12" >
                 
                 <h3>Choose File</h3>      
-                <div class="image-preview mb-3" *ngIf="previewUrl">
-                  <img [src]="previewUrl" height="180" width="200" />                 
+                <div class="d-flex image-preview mb-3" *ngIf="previewUrl">
+                  <img class="img-fluid" alt="Responsive image" [src]="previewUrl" />                 
                 </div>      
                 <div class="form-group">
                     
@@ -28,12 +28,10 @@
                 
                 <div class="form-group">
                   <input type="file" value="Choose File" name="image" (change)="fileProgress($event)" />
-                  <div class="form-group">
-                    <button class="btn btn-primary" >Submit</button>
-                </div>
+                 
                 </div>
               </div>
-              <div class="col-lg-9 col-md-6 col-sm-12 col-xs-12" >
+              <div class="col-lg-8 col-md-6 col-sm-12 col-xs-12" >
                 <div class="row">
                   <div class="col-lg-4 col-md-6 col-xs-12">
                     <div class="search-category-container">
@@ -67,19 +65,19 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-lg-3 col-md-6 col-xs-12">
+                  <div class="col-lg-4 col-md-6 col-xs-12">
                       <div class="form-group">
                           <input type="text" ngModel class="form-control" id="title" name="title" placeholder="Title" required="" data-error="Please enter your Title">
                           <div class="help-block with-errors"></div>
                       </div>
                   </div>
-                  <div class="col-lg-3 col-md-6 col-xs-12">
+                  <div class="col-lg-4 col-md-6 col-xs-12">
                       <div class="form-group">
                           <input type="text" ngModel class="form-control" id="des" name="des" placeholder="Description" required="" data-error="Please enter your Description">
                           <div class="help-block with-errors"></div>
                       </div>
                   </div>
-                  <div class="col-lg-3 col-md-6 col-xs-12">
+                  <div class="col-lg-4 col-md-6 col-xs-12">
                       <div class="form-group">
                           <input type="number" ngModel class="form-control" id="price" name="price" placeholder="Price" required="" data-error="Please enter your Price">
                           <div class="help-block with-errors"></div>
@@ -98,7 +96,7 @@
                       
                       
                       <div class="row range-slider" >
-                        <div *ngIf="Selected_Category && Selected_Category.city" class="col-lg-3 col-md-6 col-xs-12">
+                        <div *ngIf="Selected_Category && Selected_Category.city" class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                           <div class="search-category-container">
                             <label class="styled-select">
                               <select name="city" ngModel>
@@ -110,7 +108,7 @@
                             </label>
                           </div>
                         </div>
-                        <div *ngIf="Selected_Category && Selected_Category.bedrooms" class="col-lg-3 col-md-6 col-xs-12">
+                        <div *ngIf="Selected_Category && Selected_Category.bedrooms" class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                             <div class="search-category-container">
                               <label class="styled-select">
                                 <select name="bedrooms" ngModel>
