--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -143,7 +143,7 @@
                   <div class="property-item">
                     <div class="item-thumb">
                       <a class="hover-effect" href="property.html">
-                        <img class="img-fluid" src="assets/img/default.jpg" alt="">
+                        <img class="img-fluid" [src]="_post.image" alt="">
                       </a>
                       <div class="label-inner">
                       <span class="label-status label bg-red">{{_post.subcategory}}</span>
