--- a/src/app/auth/loginn/loginn.component.html
+++ b/src/app/auth/loginn/loginn.component.html
@@ -21,8 +21,8 @@
               <label class="custom-control-label" for="customCheck">Remember Me</label>
             </div>
           </div>
-          <input value="Login" type="Submit" class="btn btn-primary btn-user btn-block">
-          <a [routerLink]="'/auth/register'" class="btn btn-secondary btn-user btn-block">Create an Account!</a>
+          <input value="Login" type="Submit" class="btn   btn-user btn-block">
+          <a [routerLink]="'/auth/register'" class="btn  btn-user btn-block">Create an Account!</a>
         </form>
         <hr>
         <div class="text-center">
