--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -12,3 +12,9 @@ mat-panel-title{
         color: #0dcdbd;
     
 }
+.spinner-grow{
+    color: #0dcdbd;
+}
+.card-footer{
+    background-color: white;
+}
