--- a/backend/public/assets/css/main.css
+++ b/backend/public/assets/css/main.css
@@ -969,7 +969,7 @@ intro section style
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
 }
 
-.search-container .form-group {
+.search-container {
   margin-bottom: 30px !important;
 }
 
