--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -327,7 +327,11 @@
               </div>
             </div>
           </div>
-          <div class="row" *ngIf="loading" style="justify-content: center;" ><mat-spinner></mat-spinner></div>
+          <div class="row" *ngIf="loading" style="justify-content: center;" >
+            <div class="spinner-grow" style="width: 3rem; height: 3rem;" role="status">
+              <span class="sr-only">Loading...</span>
+            </div>
+          </div>
           <div class="row" *ngIf="!loading">
             <div *ngFor="let _post of Posts | postfilter: CategoryFilter : 'category' : CategoryFilterr :typeFilter " class="col-lg-4 col-md-6 col-xs-12">
               <div class="property-main">
@@ -345,7 +349,7 @@
                       <h3 class="property-title"><a href="property.html">{{_post.title}}</a></h3>
                       <div class="adderess">{{_post.des}}</div>
                       <div *ngFor="let f of _post.fields">
-                      <div class="adderess"><i [class]="f.icon"></i>{{f.title}}:{{f.value}}</div>
+                      <div class="adderess"><i [class]="f.icon"></i>{{f.title}}:<span class="m-1">{{f.value}}</span></div>
 
                       </div>
                       <div class="pricin-list">
@@ -354,7 +358,12 @@
                         </div>
                        <p><span>4 bds</span> . <span>4 ba</span> . <span>2500 Sqft</span></p>
                       </div>
-                    </div>               
+                    </div>      
+                    <div class="card-footer text-muted">
+                      <div *ngFor="let f of _post.fields" style="display: inline; margin-right: 15px;">
+                        <i [class]="f.icon"></i><span class="m-1">{{f.value}}</span>
+                        </div>
+                    </div>         
                   </div>              
                 </div>
               </div>
