--- a/src/app/auth/register/register.component.css
+++ b/src/app/auth/register/register.component.css
@@ -1,4 +1,9 @@
 
+
+.btn{
+  background-color: #0dcdbd !important;
+  color: white;
+}
   
   figure {
     margin: 0 0 1rem;
@@ -744,204 +749,4 @@
     }
   }
   
-  .btn {
-    display: inline-block;
-    font-weight: 400;
-    color: #858796;
-    text-align: center;
-    vertical-align: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    background-color: transparent;
-    border: 1px solid transparent;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    line-height: 1.5;
-    border-radius: 0.35rem;
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  }
   
-  @media (prefers-reduced-motion: reduce) {
-    .btn {
-      transition: none;
-    }
-  }
-  
-  .btn:hover {
-    color: #858796;
-    text-decoration: none;
-  }
-  
-  .btn:focus, .btn.focus {
-    outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(78, 115, 223, 0.25);
-  }
-  
-  .btn.disabled, .btn:disabled {
-    opacity: 0.65;
-  }
-  
-  a.btn.disabled,
-  fieldset:disabled a.btn {
-    pointer-events: none;
-  }
-  
-  .btn-primary {
-    color: #fff;
-    background-color: #4e73df;
-    border-color: #4e73df;
-  }
-  
-  .btn-primary:hover {
-    color: #fff;
-    background-color: #2e59d9;
-    border-color: #2653d4;
-  }
-  
-  .btn-primary:focus, .btn-primary.focus {
-    box-shadow: 0 0 0 0.2rem rgba(105, 136, 228, 0.5);
-  }
-  
-  .btn-primary.disabled, .btn-primary:disabled {
-    color: #fff;
-    background-color: #4e73df;
-    border-color: #4e73df;
-  }
-  
-  .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
-  .show > .btn-primary.dropdown-toggle {
-    color: #fff;
-    background-color: #2653d4;
-    border-color: #244ec9;
-  }
-  
-  .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
-  .show > .btn-primary.dropdown-toggle:focus {
-    box-shadow: 0 0 0 0.2rem rgba(105, 136, 228, 0.5);
-  }
-  
-  .btn-secondary {
-    color: #fff;
-    background-color: #858796;
-    border-color: #858796;
-  }
-  
-  .btn-secondary:hover {
-    color: #fff;
-    background-color: #717384;
-    border-color: #6b6d7d;
-  }
-  
-  .btn-secondary:focus, .btn-secondary.focus {
-    box-shadow: 0 0 0 0.2rem rgba(151, 153, 166, 0.5);
-  }
-  
-  .btn-secondary.disabled, .btn-secondary:disabled {
-    color: #fff;
-    background-color: #858796;
-    border-color: #858796;
-  }
-  
-  .btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active,
-  .show > .btn-secondary.dropdown-toggle {
-    color: #fff;
-    background-color: #6b6d7d;
-    border-color: #656776;
-  }
-  
-  .btn-secondary:not(:disabled):not(.disabled):active:focus, .btn-secondary:not(:disabled):not(.disabled).active:focus,
-  .show > .btn-secondary.dropdown-toggle:focus {
-    box-shadow: 0 0 0 0.2rem rgba(151, 153, 166, 0.5);
-  }
-  
-  .btn-success {
-    color: #fff;
-    background-color: #1cc88a;
-    border-color: #1cc88a;
-  }
-  
-  .btn-success:hover {
-    color: #fff;
-    background-color: #17a673;
-    border-color: #169b6b;
-  }
-  
-  .btn-success:focus, .btn-success.focus {
-    box-shadow: 0 0 0 0.2rem rgba(62, 208, 156, 0.5);
-  }
-  
-  .btn-success.disabled, .btn-success:disabled {
-    color: #fff;
-    background-color: #1cc88a;
-    border-color: #1cc88a;
-  }
-  
-  .btn-success:not(:disabled):not(.disabled):active, .btn-success:not(:disabled):not(.disabled).active,
-  .show > .btn-success.dropdown-toggle {
-    color: #fff;
-    background-color: #169b6b;
-    border-color: #149063;
-  }
-  
-  .btn-success:not(:disabled):not(.disabled):active:focus, .btn-success:not(:disabled):not(.disabled).active:focus,
-  .show > .btn-success.dropdown-toggle:focus {
-    box-shadow: 0 0 0 0.2rem rgba(62, 208, 156, 0.5);
-  }
-  .btn-info {
-    color: #fff;
-    background-color: #36b9cc;
-    border-color: #36b9cc;
-  }
-  .btn-info:hover {
-    color: #fff;
-    background-color: #2c9faf;
-    border-color: #2a96a5;
-  }
-  .btn-info:focus, .btn-info.focus {
-    box-shadow: 0 0 0 0.2rem rgba(84, 196, 212, 0.5);
-  }
-  .btn-info.disabled, .btn-info:disabled {
-    color: #fff;
-    background-color: #36b9cc;
-    border-color: #36b9cc;
-  }
-  .btn-info:not(:disabled):not(.disabled):active, .btn-info:not(:disabled):not(.disabled).active,
-  .show > .btn-info.dropdown-toggle {
-    color: #fff;
-    background-color: #2a96a5;
-    border-color: #278c9b;
-  }
-  .btn-info:not(:disabled):not(.disabled):active:focus, .btn-info:not(:disabled):not(.disabled).active:focus,
-  .show > .btn-info.dropdown-toggle:focus {
-    box-shadow: 0 0 0 0.2rem rgba(84, 196, 212, 0.5);
-  }
-  .btn-warning {
-    color: #fff;
-    background-color: #f6c23e;
-    border-color: #f6c23e;
-  }
-  .btn-warning:hover {
-    color: #fff;
-    background-color: #f4b619;
-    border-color: #f4b30d;
-  }
-  .btn-warning:focus, .btn-warning.focus {
-    box-shadow: 0 0 0 0.2rem rgba(247, 203, 91, 0.5);
-  }
-  .btn-warning.disabled, .btn-warning:disabled {
-    color: #fff;
-    background-color: #f6c23e;
-    border-color: #f6c23e;
-  }
-  .btn-warning:not(:disabled):not(.disabled):active, .btn-warning:not(:disabled):not(.disabled).active,
-  .show > .btn-warning.dropdown-toggle {
-    color: #fff;
-    background-color: #f4b30d;
-    border-color: #e9aa0b;
-  }
-  .btn-warning:not(:disabled):not(.disabled):active:focus, .btn-warning:not(:disabled):not(.disabled).active:focus,
-  .show > .btn-warning.dropdown-toggle:focus {
-    box-shadow: 0 0 0 0.2rem rgba(247, 203, 91, 0.5);
-  }
