--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -28,11 +28,11 @@
           <input ngModel type="password" name="confirmPassword" class="form-control form-control-user" id="exampleConfirmPassword" placeholder="ConfirmPassword">
         </div>
       
-        <button type="submit" class="btn btn-primary btn-user btn-block">
+        <button type="submit" class="btn btn-user btn-block">
           Register
         </button>
         
-        <a [routerLink]="'/auth'" class="btn btn-secondary btn-user btn-block">Login</a>
+        <a [routerLink]="'/auth'" class="btn btn-user btn-block">Login</a>
       </form>
       <hr>
       <div class="text-center">
