--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,16 +1,16 @@
-<header id="header-wrap">
-  <!-- Start Top Bar -->
+<!-- <header id="header-wrap">
+   Start Top Bar 
   <div class="top-bar">
     <div class="container">
       <div class="row">
         <div class="col-lg-7 col-md-8 col-xs-12">
-          <!-- Start Contact Info -->
+           Start Contact Info 
           <ul class="links clearfix">
             <li><i class="lni-phone-handset"></i>1-800-555-1234</li>
             <li><i class="lni-envelope"></i> info@example.com</li>
             <li><a href="#"><i class="lni-map-marker"></i> York Blvd, Los Angeles, US</a></li>
           </ul>
-          <!-- End Contact Info -->
+          End Contact Info 
         </div>
         <div class="col-lg-5 col-md-4 col-xs-12">
           <div class="roof-social float-right">
@@ -27,12 +27,12 @@
       </div>
     </div>
   </div>
-  <!-- End Top Bar -->
+   End Top Bar
 
-  <!-- Navbar Start -->
+   Navbar Start
   <nav class="navbar navbar-expand-lg navbar-light bg-white"  data-toggle="sticky-onscroll">
     <div class="container">
-      <!-- Brand and toggle get grouped for better mobile display -->
+     Brand and toggle get grouped for better mobile display 
       <div class="navbar-header">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -105,8 +105,6 @@
         </ul>
       </div>
     </div>
-
-    <!-- Mobile Menu Start -->
     <ul class="mobile-menu">
       <li>
         <a class="active" href="index.html">
@@ -186,11 +184,9 @@
         </a>
       </li>
     </ul>
-    <!-- Mobile Menu End -->
   </nav>
-  <!-- Navbar End -->
   <div class="clearfix"></div>
-</header>
+</header> -->
 
 
 
